--- a/server/grafica.html
+++ b/server/grafica.html
@@ -42,7 +42,7 @@
 
 <body>
   <canvas id="Luz"></canvas>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script src="/socket.io/socket.io.js" charset="utf-8"></script>
   <div class="row">
     <div class="column">
