--- a/server/grafica.html
+++ b/server/grafica.html
@@ -37,7 +37,7 @@
     text-decoration:none;
   }
 </style>
-
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <body>
@@ -47,6 +47,9 @@
   <div class="row">
     <div class="column">
       <script>
+      var num = 0;
+      var numh = 0;
+      var numt = 0;
       // Set Up
       const socket = io();
       var pi = Math.PI,
@@ -101,7 +104,6 @@
       .text(min)
       // Display Current value
       var current = svg.append("text")
-      .attr("transform", "translate(0,"+")") // Push up from center 1/3 of innerRadius
       .attr("text-anchor", "middle")
       .style("font-size", "50")
       .style("font-family", "Helvetica")
@@ -202,7 +204,6 @@
       .text(min2)
       // Display Current value
       var current2 = svg2.append("text")
-      .attr("transform", "translate(0,"+")") // Push up from center 1/3 of innerRadius
       .attr("text-anchor", "middle")
       .style("font-size", "50")
       .style("font-family", "Helvetica")
@@ -304,7 +305,6 @@
       .text(min3)
       // Display Current value
       var current3 = svg3.append("text")
-      .attr("transform", "translate(0,"+")") // Push up from center 1/3 of innerRadius
       .attr("text-anchor", "middle")
       .style("font-size", "50")
       .style("font-family", "Helvetica")
