--- a/server/grafica.html
+++ b/server/grafica.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-  <title>Graficas sensores</title>
+  <title>Sensores</title>
+  <link rel="icon"
+  type="image/x-icon"
+      href="http://www.iconarchive.com/download/i88800/icons8/ios7/Plants-Hand-Planting.ico" />
   <link rel="icon"
   href="favicon.ico"/>
 
